@@ -2,6 +2,13 @@
  XGngeo - Changelog
 ~~~~~~~~~~~~~~~~~~~~
 
+* Changes in version 16 (2005-07-XX):
+
+- Added checking for the PyGTK version (must be 2.6 or more). 
+- Bugfix: no more problem in the Rom list with some PyGTK ins-
+tallations. 
+
+
 * Changes in version 15 (2005-07-14):
 
 - Big configuration panels reorganization with now 3 different
